fixed shop, added spacing

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -91,3 +91,7 @@ h2 {
     display: inline-block;
   }
 }
+
+.section {
+  margin-bottom: 80px;
+}
